style/main.css
/* Reset to reasonable CSS baseline */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td 
{
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

body 
{
    line-height: 1;
}

ol, ul 
{
    list-style: none;
}

blockquote, q 
{
    quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after 
{
    content: '';
    content: none;
}

/* remember to define focus styles! */
:focus 
{
    outline: 0;
}

/* remember to highlight inserts somehow! */
ins 
{
    text-decoration: none;
}

del 
{
    text-decoration: line-through;
}

/* tables still need 'cellspacing="0"' in the markup */
table 
{
    border-collapse: collapse;
    border-spacing: 0;
}

/* Logo font */

@font-face 
{
	font-family: 'greyscale_basic_regular';
	font-style: normal;
	font-weight: 400;
	src: local('greyscale_basic_regular'), local('greyscale_basic_regular'), url('greyscale_basic_regular.ttf') format('truetype');
}

.notification
{
	background-color: #ddd;
	border: solid 1px #ccc;
	color: #888888;
	padding: 8px;
	display: table;
	width: 600px;
}

input[type=text]
{
	background-color: #eaeaea;
	/*height: 15px;*/
	line-height: 1.0em;
}

.centered
{
	margin-left: 8px;
	margin-right: auto;
}

body
{
	font-family: Helvetica, Arial, Sans-serif;
	font-size: 10pt;
	line-height: 1.5em;
	background-color: #e2e2e2;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

html, body
{
	padding: 0px;
	margin: 0px;
}

.noselect
{
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

#content
{
	display: none;
	width: 100%;
	height: 46px;
	background: url('../images/topnavi_gradient.png') repeat repeat;
	margin: 0px;
	padding: 0px;
	padding-top: 4px;
}

#controls
{
	width: 1024px;
}

#logo
{
	font-size: 22pt;
	font-weight: normal;
	font-family: 'greyscale_basic_regular', sans-serif;
	margin: 0px;
	margin-top: 9px;
	float: left;
	width: 182px;
}

#dbg 
{
	margin-left: 3px;
	margin-top: 6px;
	float: left;
	width: 935px;
	height: 245px;
	font-size: 8pt;
	background-color: #fff;
	overflow: scroll;
	border-left: 1px solid #ccc;
	border-top: 1px solid #ccc;
	border-right: none;
	border-bottom: none;
	padding: 2px;
}

#main_layout
{
	text-align: left;
	vertical-align: top;
	width: 1124px;
	margin-top: 3px;
}

#structure
{
	width: 180px;
	height: 513px;
	float: left;
	background-color: #eee;
}

#info
{
	font-size: 8pt;
	margin-top: 13px;
	margin-left: 8px;
	padding: 2px;
	width: 174px;
	height: 345px;
	float: left;
	background-color: #fff;
	border: 1px dotted #ccc;
}

#breadcrumb
{
	position: absolute;
	background-color: #000;
	color: #fff;
	opacity: 0.75;
	padding-left: 4px;
	padding-right: 4px;
	padding-top: 2px;
	padding-bottom: 2px;
	z-index: 10000;
}

#canvas_parent
{
	float: right;
	background-color: #ccc;
	width: 940px;
	height: 620px;
	z-index: 1;
	overflow: scroll;
	position: relative;
	border: none;
	-moz-box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.5);
	-webkit-box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.5);
	box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.5);
}

#canvas
{
	width: 940px;
	height: 620px;
	position: relative;
	top: 0px;
	left: 0px;
	z-index: 2;
}

.webgl-canvas-normal
{
	background-color: #000; 
	position: absolute; 
	left: 1136px; 
	top: 45px;
	width: 480px;
	height: 270px;
}

.webgl-canvas-fs
{
	background-color: #000; 
	position: absolute; 
	left: 0px; 
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 10000;
}

#tabs
{
	position: absolute; 
	width: 473px;
	height: 595px;
	left: 1136px; 
	top: 318px;
}

.ui-tabs-panel
{
	padding: 5px 4px !important;
}

#persist
{
	width: 460px;
	height: 495px;
	resize: none;
	font-size: 8pt;
	background-color: #fff;
	white-space: pre;
	word-wrap: normal;
	overflow-y: scroll;
	overflow-x: scroll;
	font-family: monospace;
	border-left: 1px solid #ccc;
	border-top: 1px solid #ccc;
	border-right: none;
	border-bottom: none;
	-webkit-touch-callout: auto;
	-webkit-user-select: auto;
	-khtml-user-select: auto;
	-moz-user-select: auto;
	-ms-user-select: auto;
	user-select: auto;
	padding: 2px;
}

#save-minified-div
{
	float: right;
	color: #666;
	margin-top: 12px;
}

#save-min-lbl
{
	font-size: 12px;
	position: relative;
	top: -2px;
}

#save
{
	float: left;
	margin-top: 5px;
}

#load
{
	float: left;
	margin-top: 5px;
	margin-right: 5px;
}

#load-clipboard
{
	float: left;
	margin-top: 5px;
	margin-right: 5px;
}

#snippets-list
{
	font-family: tahoma, arial, helvetica;
	font-size: 13px;
	width: 465px;
	height: 500px;
	background-color: #fff;
	border: 1px solid #ccc;
	border-right: none;
	padding: 2px;
}

optgroup
{
	color: #fff;
	background-color: #444;
}

#load-snippet
{
	float: left;
	margin-top: 5px;
}

.plugin
{
	font-size: 8pt;
	background-color: #ff8;
	border: 1px solid #888;
	z-index: 100;
	padding: 4px;
	cursor: move;
	position: absolute;
	white-space: nowrap;
}
	
.graph
{
	background: #ffa !important;
}

.proxy
{
	background: #fcd7b3 !important;
}

.register
{
	background: #c6ffc8 !important;
}


.pl_layout
{
	border-collapse: separate;
	border-spacing: 0px;
}

.pl_header
{
/*	background-color: #dde; */
	background-color: #656974;
	color: #fff;
}

.pl_header #t
{
	padding: 0px;
	padding-left: 2px;
	padding-right: 2px;
	display: inline-block;
	width: 100%;
}

#ic
{
	text-align: left;
	vertical-align: top;
}

#oc
{
	text-align: right;
	vertical-align: top;
}

.pl_slot
{
	cursor: pointer;
}

.pui_col
{
	padding: 3px;
}

li.context-menu-item span
{
	white-space: nowrap;
}

/* Context menu */
.menu-panel
{
	position:relative;
	left: 20px;
	
	padding: 0px 4px;
	background-color: #eee;
	-moz-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
	-webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
	box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
	display: table-cell;
	cursor: pointer;
}

.menu-item
{
	padding: 2px;
	height: 16px;
	margin: 4px 0px;
	white-space: nowrap;
}

.menu-grp-item
{
	padding: 2px;
	padding-left: 21px;
	height: 16px;
	margin: 4px 0px;
}

.menu-icon
{
	float: left;
	width: 16px;
	height: 16px;
	padding: 0;
	margin: 0;
	margin-right: 2px;
}

.plugin-icon
{
	float: left;
	width: 16px;
	height: 16px;
	padding: 0;
	margin: 0;
	margin-right: 2px;
	position: relative;
	top: 2px;
	left: 2px;
	background-color: #eee;
}

.menu-lbl
{
	font-size: 9pt;
	position: relative;
	top: -3px;
	padding: 2px;
	padding-right: 4px;
	margin: 0px;
	white-space: nowrap;
}

.menu-grp-img
{
	float: right;
	background: url('../images/group.png');
	width: 16px;
	height: 16px;
	padding: 0;
	margin: 0;
	margin-left: 18px;
}

